# SDL-example-build-in-VC-Code-two

./: .gitignore  CMakeLists.txt  README.md  foofoo.txt
inc/: picrender.h  picwindow.h
src/: main.cpp  picrender.cpp  picwindow.cpp
